fix: transform animation not working on IOS chrome browsers

--- a/app/scss/_header.scss
+++ b/app/scss/_header.scss
@@ -60,6 +60,7 @@
           height: 0.3rem;
           background-color: black;
           transition: all 300ms ease-in-out;
+          transform: rotate(0deg); // fix for transform not working on IOS chrome browswers
           transform-origin: 2px 1px;
 
           &:not(:last-child) {
